--- a/config-test.yml
+++ b/config-test.yml
@@ -1,7 +1,2 @@
-server:
-  port: 8003
-
-spring:
-  #服务别名，注册到zookeeper服务名称
-  application:
-    name: cloud-provider-payment
+config:
+  info: test.yml
